syntax = "proto3";

package service;

option go_package = "./service;service";


//https://github.com/jvolkman/intellij-protobuf-editor/issues/13#issuecomment-626325662
//解决引入问题
import "google/api/annotations.proto";
import "service/models.proto";

// 枚举类型
enum ProdAreas {
  A = 0;
  B = 1;
  C = 2;
}

message ProdRequest {
  int32 prod_id = 1; // 传入id
  ProdAreas prod_area = 2; // 传入区域
}

message ProdResponse {
  int32 prod_stock = 1; // 库存
}

message QuerySize {
  int32 size = 1; // 页尺寸
}

message ProdResponseList {
  //repeated是一个修饰符，返回字段可以重复很多很多次包括0次，可以看做一个切片|数组
  repeated ProdResponse prods = 1;
}

service ProdService {
  rpc getProdService(ProdRequest) returns (ProdResponse) {
    option (google.api.http) = {
      get: "/v1/prod/{prod_id}"
    };
  }

  rpc getProdStocks(QuerySize) returns (ProdResponseList);

  // 测试引入外部的.proto
  rpc getProdInfo(ProdRequest) returns (ProdModel) {
    option (google.api.http) = {
      get: "/v1/prodInfo/{prod_id}"
    };
  };
}