syntax = "proto3";

package service;

//option go_package = "{out_path};out_go_package";
option go_package = "./service;service";

import "google/api/annotations.proto";
import "service/models.proto";

message OrderResponse {
  string status = 1;
  string message = 2;
}

message OrderRequest {
  int32 order_id = 1; // 订单id 数字自增
  OrderMain order_main = 2;
}

service OrderService {
  rpc NewOrder(OrderRequest) returns (OrderResponse) {
    option (google.api.http) = {
      post : "/v1/orders",
      body : "order_main"
    };
  }

  rpc GetOrderInfo(OrderRequest) returns (OrderMain) {
    option (google.api.http) = {
      get : "/v1/orderInfo/{order_id}",
    };
  }
}